added a button in the top of the grid

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div class="center-div">
+    <div id="changeGrid">
+        <button id="#btn">CHANGE GRID</button>
+    </div>
     <div id="container">
     </div>
+</div>
     <script src='script.js' defer></script>
 </body>
 </html>
