--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="main.css">
-</head>
-<body>
-<div class="center-div">
-    <div id="changeGrid">
-        <button id="#btn">CHANGE GRID</button>
+  </head>
+  <body>
+    <div class="center-div">
+      <div id="changeGrid">
+        <button id="btn" onclick="gridChange();">CHANGE GRID</button>
+      </div>
+      <div id="container">
+      </div>
     </div>
-    <div id="container">
-    </div>
-</div>
     <script src='script.js' defer></script>
-</body>
+  </body>
 </html>
